tests/hulk/ok/minimal/conditionals.hulk
function classify(n: Number): String {
    if (n < 0) "negative"
    elif (n == 0) "zero"
    else "positive";
}

{
    print(classify(-5));
    print(classify(0));
    print(classify(42));
}
