tests/hulk/errors/semantic/type_mismatch_return.hulk
function get_number(): Number {
    "hello";
}

print(get_number());
